creating an indicator

--- a/creting_an_indicator.ipynb
+++ b/creting_an_indicator.ipynb
@@ -72,6 +72,22 @@
    "source": [
     "Df['SAR']=ta.SAR(np.array(Df['High'].shift(1)),np.array(Df['Low'].shift(1)),0.2,0.2)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explanation \n",
+    "\n",
+    "This calls the SAR function from the TA-Lib library to calculate the Parabolic Stop and Reverse values. This function needs:\n",
+    "\t1.\tHigh prices\n",
+    "\t2.\tLow prices\n",
+    "\t3.\tAcceleration factor (acc), often 0.02 or 0.2\n",
+    "\t4.\tMaximum step (max), often 0.2\n",
+    "\n",
+    "What is shift(1)?\n",
+    "“Give me the previous row’s High/Low value.”"
+   ]
   }
  ],
  "metadata": {
