--- a/codes/Download SVC_Strategy_Analysis.ipynb
+++ b/codes/Download SVC_Strategy_Analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b2c8c716",
+   "metadata": {},
+   "source": [
+    "# 📘 Row-by-Row Explanation\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1291dc29",
@@ -107,18 +115,13 @@
     "Sharpe = np.sqrt(252 * 375) * excess_strategy_returns.mean() / excess_strategy_returns.std()\n",
     "print(\"Sharpe Ratio:\", Sharpe)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b2c8c716",
-   "metadata": {},
-   "source": [
-    "# 📘 Row-by-Row Explanation\n",
-    "The next cells break down each part of the code above."
-   ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
