--- a/codes/Download SVC_Strategy_Analysis.ipynb
+++ b/codes/Download SVC_Strategy_Analysis.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1291dc29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sharpe Ratio: 48.350291711655125\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# 📦 Importing libraries\n",
@@ -33,7 +41,7 @@
     "Df = Df.drop(Df[Df['Volume'] == 0].index)\n",
     "\n",
     "# ⏱️ Converting time string to datetime\n",
-    "Df['Time'] = pd.to_datetime(Df['Time'])\n",
+    "Df['Time'] = pd.to_datetime(Df['Time'], dayfirst=True)\n",
     "\n",
     "# 📊 Splitting 80% for training\n",
     "t = .8\n",
@@ -118,8 +126,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
